<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ScrollView">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.example.grow.MainActivity" >
	
	    <TextView
	        android:id="@+id/category"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/EventInfo"
	        android:layout_marginTop="20dp"
	        android:text="@string/Category"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/category"
	        android:layout_below="@+id/category"
	        android:layout_marginTop="22dp"
	        android:text="@string/Date"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/date"
	        android:layout_below="@+id/date"
	        android:layout_marginTop="27dp"
	        android:text="@string/Time"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/peopleNeeded"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/time"
	        android:layout_below="@+id/time"
	        android:layout_marginTop="27dp"
	        android:text="@string/PeopleNeeded"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/about"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/peopleNeeded"
	        android:layout_below="@+id/peopleNeeded"
	        android:layout_marginTop="24dp"
	        android:text="@string/About"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <Button
	        android:id="@+id/signUpButton"
	        android:layout_width="125dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginBottom="15dp"
	        android:layout_marginRight="22dp"
	        android:background="@drawable/button_custom"
	        android:text="@string/SignUp"
	        android:textColor="@drawable/custom_text_color" />
	
	    <TextView
	        android:id="@+id/EventInfo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="18dp"
	        android:text="@string/NewEvent"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	</RelativeLayout>
</ScrollView>