<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.grow.MainActivity" >

    <TextView
        android:id="@+id/accountInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/AccountInfo"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/accountInfoLabel"
        android:layout_marginTop="22dp"
        android:text="@string/Name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="22dp"
        android:text="@string/Email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/orgAccountSubmitChangesButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/email"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_custom"
        android:text="@string/EditEventDetails"
        android:textColor="@drawable/custom_text_color" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/orgAccountSubmitChangesButton"
        android:layout_marginTop="18dp"
        android:text="@string/Description"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/orgAccountDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/OrgAddInfo"
        android:inputType="textMultiLine" />
    
    <EditText
		android:id="@+id/orgNameText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/name"
		android:layout_alignBottom="@+id/name"
		android:layout_alignParentRight="true"
		android:inputType="textCapWords" />
    <EditText
		android:id="@+id/orgEmailText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/email"
		android:layout_alignBottom="@+id/email"
		android:inputType="textEmailAddress"
		android:layout_alignParentRight="true"/>

</RelativeLayout>