<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:id="@+id/ScrollView">
	<RelativeLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	tools:context="com.example.grow.MainActivity" >
	    
	    <TextView
	        android:id="@+id/newEventLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/NewEvent"
	        android:textColor="@color/grow_green"
	        android:textSize="20sp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
    
   		<TextView
        	android:id="@+id/errorField"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentRight="true"
        	android:layout_toRightOf="@+id/newEventLabel"
        	android:textColor="@color/red" 
        	android:textAppearance="?android:attr/textAppearanceSmall" />

	    <TextView
	        android:id="@+id/orgCreateEventTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/newEventLabel"
	        android:layout_below="@+id/newEventLabel"
	        android:layout_marginTop="18dp"
	        android:text="@string/Title"
	        android:labelFor="@+id/titleText"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    	<TextView
        	android:id="@+id/orgCreateEventCategory"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignLeft="@+id/orgCreateEventTitle"
        	android:layout_below="@+id/orgCreateEventTitle"
        	android:layout_marginTop="18dp"
        	android:text="@string/Category"
        	android:textAppearance="?android:attr/textAppearanceMedium" />

    	<TextView
        	android:id="@+id/orgCreateEventDate"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignLeft="@+id/orgCreateEventCategory"
        	android:layout_below="@+id/orgCreateEventCategory"
        	android:layout_marginTop="18dp"
        	android:text="@string/Date"
        	android:textAppearance="?android:attr/textAppearanceMedium" />

    	<TextView
        	android:id="@+id/orgCreateEventTime"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignLeft="@+id/orgCreateEventDate"
        	android:layout_below="@+id/orgCreateEventDate"
        	android:layout_marginTop="18dp"
        	android:text="@string/Time"
        	android:textAppearance="?android:attr/textAppearanceMedium" />

    	<TextView
        	android:id="@+id/peopleNeeded"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignLeft="@+id/orgCreateEventTime"
        	android:layout_below="@+id/orgCreateEventTime"
        	android:layout_marginTop="18dp"
        	android:text="@string/PeopleNeeded"
        	android:textAppearance="?android:attr/textAppearanceMedium" />

    	<TextView
        	android:id="@+id/orgCreateEventDescription"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignLeft="@+id/peopleNeeded"
        	android:layout_below="@+id/createEventButton"
        	android:layout_marginTop="18dp"
        	android:text="@string/Description"
        	android:textAppearance="?android:attr/textAppearanceMedium" />


    	<Button
        	android:id="@+id/createEventButton"
        	android:layout_width="125dp"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/peopleNeeded"
        	android:layout_alignParentRight="true"
        	android:layout_marginTop="18dp"
        	android:background="@drawable/button_custom"
        	android:onClick="orgCreateEvent"
        	android:text="@string/CreateEvent"
        	android:textColor="@drawable/custom_text_color" />

    	<EditText
        	android:id="@+id/titleText"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignBaseline="@+id/orgCreateEventTitle"
        	android:layout_alignBottom="@+id/orgCreateEventTitle"
        	android:layout_alignRight="@+id/numPplText"
        	android:layout_toRightOf="@+id/orgCreateEventTime"
        	android:inputType="textCapSentences"
        	android:ems="10" >

        	<requestFocus />
    	</EditText>

    	<Spinner
        	android:id="@+id/orgCreateEventSpinner_category"
        	android:layout_width="wrap_content"
        	android:layout_height="18dp"
        	android:layout_above="@+id/orgCreateEventDate"
        	android:layout_toRightOf="@+id/orgCreateEventDescription"
        	tools:listitem="@android:layout/simple_spinner_dropdown_item" />

		<EditText
	        android:id="@+id/dateText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/orgCreateEventDate"
	        android:layout_alignBottom="@+id/orgCreateEventDate"
	        android:layout_alignLeft="@+id/titleText"
	        android:layout_alignRight="@+id/titleText"
	        android:ems="10"
	        android:hint="@string/DateFormat"
	        android:inputType="date" />
	
	    <EditText
	        android:id="@+id/timeText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/orgCreateEventTime"
	        android:layout_alignBottom="@+id/orgCreateEventTime"
	        android:layout_alignLeft="@+id/dateText"
	        android:layout_alignRight="@+id/numPplText"
	        android:ems="10"
	        android:inputType="text"
	        android:hint="@string/TimeHint"/>

    	<EditText
        	android:id="@+id/numPplText"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignBaseline="@+id/peopleNeeded"
        	android:layout_alignBottom="@+id/peopleNeeded"
        	android:layout_toRightOf="@+id/peopleNeeded"
        	android:ems="10"
        	android:inputType="numberSigned" />

    	<EditText
    	    android:id="@+id/descriptionText"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/orgCreateEventDescription"
    	    android:layout_marginTop="10dp"
    	    android:layout_centerHorizontal="true"
    	    android:layout_alignParentLeft="true"
    	    android:layout_alignParentRight="true"
    	    android:inputType="textCapSentences|textMultiLine"
    	    android:ems="10" />

	</RelativeLayout>
</ScrollView>
