<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/errorField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@color/red" 
        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <TextView
	        android:id="@+id/event_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="14dp"
	        android:text="@string/Title"
	        android:labelFor="@+id/event_titleText"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/event_title"
        android:layout_below="@+id/event_title"
        android:layout_marginTop="22dp"
        android:text="@string/Date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/event_date"
        android:layout_below="@+id/event_date"
        android:layout_marginTop="27dp"
        android:text="@string/Time"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
	    <TextView
	        android:id="@+id/event_peopleNeeded"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/event_time"
	        android:layout_below="@+id/event_time"
	        android:layout_marginTop="27dp"
	        android:text="@string/PeopleNeeded"
	        android:labelFor="@+id/event_numPplText"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/event_description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/event_peopleNeeded"
	        android:layout_below="@+id/event_peopleNeeded"
	        android:layout_marginTop="24dp"
	        android:text="@string/Description"
	        android:labelFor="@+id/event_descriptionText"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
		android:id="@+id/event_titleText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/event_title"
		android:layout_alignBottom="@+id/event_title"
		android:inputType="textCapSentences"
		android:layout_alignParentRight="true"/>

    <EditText
        android:id="@+id/event_dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/event_date"
        android:layout_alignBottom="@+id/event_date"
        android:inputType="date"
        android:hint="@string/DateFormat"
		android:layout_alignParentRight="true"/>

    <EditText
        android:id="@+id/event_descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/event_description"
        android:layout_alignBottom="@+id/event_description"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/event_peopleNeeded"
        android:clickable="true"
        android:ems="10"
        android:inputType="textCapSentences|textMultiLine"
        android:isScrollContainer="True"
        android:maxLength="500"
        android:maxLines="2"
        android:scrollbars="vertical"
        android:textColorLink="@android:color/holo_green_dark" />

    <EditText
        android:id="@+id/event_numPplText"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/event_peopleNeeded"
        android:layout_alignBottom="@+id/event_peopleNeeded"
        android:layout_alignLeft="@+id/event_timeText"
        android:layout_alignParentRight="true"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/event_timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/event_time"
		android:layout_alignBottom="@+id/event_time"
		android:hint="@string/TimeHint"
		android:inputType="text"
		android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/EditEventButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/event_descriptionText"
        android:layout_below="@+id/event_descriptionText"
        android:layout_marginTop="34dp"
        android:background="@drawable/button_custom"
        android:text="@string/EditEventDetails"
        android:textColor="@drawable/custom_text_color" />
 

</RelativeLayout>

</ScrollView>

