<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ScrollView">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.example.grow.MainActivity" >
	
	    <TextView
	        android:id="@+id/SignIn_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/SignIn_name"
	        android:layout_below="@+id/SignIn_name"
	        android:layout_marginTop="34dp"
	        android:text="@string/Password"
	        android:textSize="20sp" 
	        android:labelFor="@+id/passwordText"/>
	
	    <TextView
	        android:id="@+id/SignIn_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="81dp"
	        android:text="@string/Name"
	        android:textSize="20sp" 
	        android:labelFor="@+id/nameText"/>
	    
	
	    <EditText
	        android:id="@+id/nameText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/SignIn_name"
	        android:layout_alignBottom="@+id/SignIn_name"
	        android:layout_alignRight="@+id/passwordText"
	        android:layout_toRightOf="@+id/SignIn_name"
	        android:ems="10"
	        android:inputType="textCapWords" />
	
	    <EditText
	        android:id="@+id/passwordText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/SignIn_password"
	        android:layout_toRightOf="@+id/SignIn_password"
	        android:ems="10"
	        android:inputType="textPassword" />
	
	    <TextView
	        android:id="@+id/NoAccount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/SignIn_password"
	        android:layout_alignTop="@+id/OrgSignIn"
	        android:layout_marginTop="59dp"
	        android:text="@string/NoAccount"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <Button
	        android:id="@+id/SignUp"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:layout_alignRight="@+id/OrgSignIn"
	        android:layout_below="@+id/NoAccount"
	        android:layout_marginTop="16dp"
	        android:background="@drawable/button_custom"
	        android:onClick="orgRegisterScreen"
	        android:text="@string/SignUp"
	        android:textColor="@drawable/custom_text_color" />
	
	    <Button
	        android:id="@+id/OrgSignIn"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:layout_alignRight="@+id/passwordText"
	        android:layout_below="@+id/passwordText"
	        android:layout_marginTop="60dp"
	        android:background="@drawable/button_custom"
	        android:text="@string/SignIn"
	        android:textColor="@drawable/custom_text_color"
	        android:onClick="orgSignIn" />
	
	    <TextView
	        android:id="@+id/errorMessage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/SignIn_name"
	        android:layout_alignRight="@+id/NoAccount"
	        android:textColor="@color/red"
	        android:layout_below="@+id/NewOrgHeader"
	        android:layout_marginTop="15dp"/>


	    <TextView
	        android:id="@+id/NewOrgHeader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/errorMessage"
	        android:layout_alignParentTop="true"
	        android:text="@string/OrganizationButton"
	        android:textColor="@color/grow_green"
	        android:textSize="30sp"/>
	
	</RelativeLayout>
</ScrollView>
