<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ScrollView">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.example.grow.MainActivity" >
	
	    <TextView
	        android:id="@+id/NoStudentAccount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/StudentSignInNameLabel"
	        android:layout_below="@+id/StudentSignIn"
	        android:layout_marginTop="17dp"
	        android:text="@string/NoAccount"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    <EditText
        android:id="@+id/StudentNameSignText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/StudentSignInNameLabel"
        android:layout_alignRight="@+id/NoStudentAccount"
        android:layout_toRightOf="@+id/StudentSignInNameLabel"
        android:ems="10"
        android:inputType="textCapWords" />

	
	    <EditText
	        android:id="@+id/StudentPasswordSignText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/StudentSignInPasswordLabel"
	        android:layout_alignBottom="@+id/StudentSignInPasswordLabel"
	        android:layout_toRightOf="@+id/StudentSignInPasswordLabel"
	        android:ems="10"
	        android:inputType="textPassword" />
	
	    <TextView
	        android:id="@+id/StudentSignInNameLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="86dp"
	        android:text="@string/Name"
	        android:textSize="20sp" 
	        android:labelFor="@+id/StudentNameSignText"/>
	
	    <TextView
	        android:id="@+id/StudentSignInPasswordLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/StudentNameSignText"
	        android:layout_marginTop="30dp"
	        android:text="@string/Password"
	        android:textSize="20sp" 
	        android:labelFor="@+id/StudentPasswordSignText"/>

	    <TextView
	        android:id="@+id/ErrorStudentSignIn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/StudentSignInNameLabel"
	        android:layout_alignRight="@+id/StudentNameSignText"
	        android:layout_below="@+id/StudentSignInHeader"
	        android:layout_marginTop="15dp"
	        android:textColor="@color/red" />

	    <TextView
	        android:id="@+id/StudentSignInHeader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/ErrorStudentSignIn"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="15dp"
	        android:text="@string/StudentHeader" 
	        android:textColor="@color/grow_green"
	        android:textSize="30sp"/>




	    <Button
	        android:id="@+id/StudentSignIn"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:layout_alignRight="@+id/StudentPasswordSignText"
	        android:layout_below="@+id/StudentPasswordSignText"
	        android:layout_marginTop="52dp"
	        android:background="@drawable/button_custom"
	        android:onClick="studentSignIn"
	        android:text="@string/SignIn"
	        android:textColor="@drawable/custom_text_color" />


	    <Button
	        android:id="@+id/StudentSignUp"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:layout_alignLeft="@+id/StudentSignIn"
	        android:layout_below="@+id/NoStudentAccount"
	        android:layout_marginTop="15dp"
	        android:background="@drawable/button_custom"
	        android:onClick="studentRegisterScreen"
	        android:text="@string/SignUp"
	        android:textColor="@drawable/custom_text_color" />

	</RelativeLayout>
</ScrollView>
